# HandOver

./: .gitignore  README.md
backend/: Makefile  README.md  alembic.ini  go.mod  main.go  pyproject.toml
backend/app/: main.py  routes.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 2c9a56717b32_add_user_table.py  78f1c238eb9e_add_refresh_tokens_table.py  e6fc294824b8_add_user_table.py
backend/app/auth/: cleanup.py  dependencies.py  models.py  repository.py  routes.py  service.py  utils.py
backend/app/core/: config.py  db.py
backend/app/models/: user.py
backend/app/users/: constants.py  models.py  private_routes.py  repository.py  routes.py  service.py
frontend/: package.json  pnpm-lock.yaml
frontend/app/: root.tsx  routes.ts
frontend/app/components/: layout.tsx  loading.tsx  nav-user.tsx  team-switcher.tsx
frontend/app/components/ui/: button.tsx  card.tsx  dropdown-menu.tsx  logo.tsx  select.tsx  sidebar.tsx  table.tsx  tabs.tsx
frontend/app/layout/: app-sidebar.tsx  layout.tsx  login-form.tsx
frontend/app/routes/: dashboard.tsx
frontend/app/routes/login/: index.tsx
frontend/app/routes/tasks/: [id].tsx  index.tsx  new.tsx
